update to fix word wrap and old tags

--- a/index.css
+++ b/index.css
@@ -70,6 +70,7 @@ a:link {
   table {
     table-layout: fixed;
     width: 100%;
+    overflow-wrap: break-word;
   }
   
   thead {
@@ -113,3 +114,13 @@ a:link {
   .sample_form td {
     padding: 15px;
 }
+
+pre {
+  overflow-x: auto; /* Use horizontal scroller if needed; for Firefox 2, not needed in Firefox 3 */
+  white-space: pre-wrap; /* css-3 */
+  white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
+  white-space: -pre-wrap; /* Opera 4-6 */
+  white-space: -o-pre-wrap; /* Opera 7 */
+  /* width: 99%; */
+  word-wrap: break-word; /* Internet Explorer 5.5+ */
+ }
